<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textViewEncabezado2"
        android:id="@+id/textViewEncabezado2"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:padding="7dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical|center_horizontal">

                <Button
                    style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha"
                    android:id="@+id/buttonFechaUsuario" />

                <Button
                    style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha"
                    android:id="@+id/buttonFechaUsuario2" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="90dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/resultado"
                android:id="@+id/textViewResultado"
                android:gravity="center_vertical|center_horizontal"
                android:background="@android:drawable/editbox_background_normal" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonCalcular"
                android:id="@+id/buttonCalcular"
                android:background="@android:drawable/btn_default" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonReiniciar"
                android:id="@+id/buttonReiniciar"
                android:background="@android:drawable/btn_default" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonVolver"
                android:id="@+id/buttonVolver"
                android:background="@android:drawable/btn_default"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>